2011/10/10:  - libtecla/Makefile.am: add manpages to EXTRA_DIST and MAINTAINERCLEANFILES.

--- a/Makefile.am
+++ b/Makefile.am
@@ -43,11 +43,16 @@ man1_MANS  = $(foreach xx,$(wildcard $(srcdir)/man/prog/*.in),$(xx:%.in=%))
 
 endif
 
-EXTRA_DIST = $(wildcard $(srcdir)/man/func/*.in)
-EXTRA_DIST+= $(wildcard $(srcdir)/man/libr/*.in)
-EXTRA_DIST+= $(wildcard $(srcdir)/man/misc/*.in)
-EXTRA_DIST+= $(wildcard $(srcdir)/man/file/*.in)
-EXTRA_DIST+= $(wildcard $(srcdir)/man/prog/*.in)
+MANINP = $(wildcard $(srcdir)/man/func/*.in)
+MANINP+= $(wildcard $(srcdir)/man/libr/*.in)
+MANINP+= $(wildcard $(srcdir)/man/misc/*.in)
+MANINP+= $(wildcard $(srcdir)/man/file/*.in)
+MANINP+= $(wildcard $(srcdir)/man/prog/*.in)
+
+EXTRA_DIST = $(MANINP)
+EXTRA_DIST+=$(MANINP:%.in=%)
+
+MAINTAINERCLEANFILES=$(MANINP:%.in=%)
 
 # Also dist the prebuilt html pages; user needs man2html
 # to reconstruct those...
